simple.output
No terminales inútiles en la gramática

   identificadorMultiple
   especificacionTipo
   tipoNoEstructurado
   claveValor
   campoValor
   rango
   clausulaIteracion


Terminales no usados en la gramática

   ABSTRACTO
   BOOLEANO
   BUCLE
   CARACTER
   CASOS
   CLASE
   COMO
   CONSTANTE
   CONSTRUCTOR
   CORTO
   CUANDO
   DE
   DESCENDENTE
   DESTRUCTOR
   DEVOLVER
   DICCIONARIO
   EN
   ENTERO
   ENUMERACION
   ES
   ESPECIFICO
   EXCEPCION
   EXPORTAR
   FIN
   FINAL
   FINALMENTE
   GENERICO
   IMPORTAR
   LARGO
   LANZA
   LIBRERIA
   LISTA
   MIENTRAS
   OBJETO
   OTRO
   PARA
   PRINCIPIO
   PRIVADO
   PROGRAMA
   PROTEGIDO
   PRUEBA
   PUBLICO
   RANGO
   REAL
   REFERENCIA
   REGISTRO
   REPETIR
   SALIR
   SIGNO
   SIGUIENTE
   SUBPROGRAMA
   TABLA
   TIPO
   ULTIMA
   VALOR
   ID
   DOS_PUNTOS
   ASIGNACION
   FLECHA
   INC
   DEC
   DESPI
   DESPD
   LEQ
   GEQ
   NEQ
   AND
   OR
   ASIG_SUMA
   ASIG_RESTA
   ASIG_MULT
   ASIG_DIV
   ASIG_RESTO
   ASIG_POT
   ASIG_DESPI
   ASIG_DESPD
   ':'


Reglas inútiles en la gramática

   32 identificadorMultiple: IDENTIFICADOR ',' IDENTIFICADOR
   33                      | identificadorMultiple ',' IDENTIFICADOR

   34 especificacionTipo: nombre
   35                   | tipoNoEstructurado

   36 tipoNoEstructurado: %empty

   37 claveValor: CTC_CADENA FLECHA expresion

   38 campoValor: IDENTIFICADOR FLECHA expresion

   39 rango: expresion DOS_PUNTOS expresion
   40      | rango DOS_PUNTOS expresion

   41 clausulaIteracion: PARA IDENTIFICADOR EN expresion
   42                  | PARA IDENTIFICADOR EN ':' especificacionTipo EN expresion
   43                  | REPETIR IDENTIFICADOR EN RANGO
   44                  | REPETIR IDENTIFICADOR ':' especificacionTipo EN rango
   45                  | REPETIR IDENTIFICADOR EN RANGO DESCENDENTE
   46                  | REPETIR IDENTIFICADOR ':' especificacionTipo EN RANGO DESCENDENTE
   47                  | MIENTRAS expresion


Estado 21 conflictos: 10 reducción/reducción


Gramática

    0 $accept: fin $end

    1 fin: primario
    2    | fin primario
    3    | fin cadenaMult
    4    | fin expresionCondicional

    5 cadenaMult: CTC_CADENA ',' CTC_CADENA
    6           | cadenaMult ',' CTC_CADENA
    7           | cadenaMult ',' error

    8 nombre: IDENTIFICADOR
    9       | nombre CUATRO_PUNTOS IDENTIFICADOR

   10 expresionMult: expresionMult ',' expresion
   11              | expresion ',' expresion
   12              | expresion ',' error

   13 expresion: primario

   14 primario: literal
   15         | objeto
   16         | '(' expresion ')'

   17 literal: VERDADERO
   18        | FALSO
   19        | CTC_ENTERA
   20        | CTC_REAL
   21        | CTC_CARACTER
   22        | CTC_CADENA

   23 objeto: nombre
   24       | objeto '.' nombre
   25       | objeto '[' expresion ']'
   26       | objeto '[' expresionMult ']'
   27       | objeto '{' CTC_CADENA '}'
   28       | objeto '{' cadenaMult '}'

   29 expresionCondicional: expresion
   30                     | SI expresion ENTONCES expresion
   31                     | SI expresion ENTONCES expresion SINO expresion


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 16
')' (41) 16
',' (44) 5 6 7 10 11 12
'.' (46) 24
':' (58)
'[' (91) 25 26
']' (93) 25 26
'{' (123) 27 28
'}' (125) 27 28
error (256) 7 12
ABSTRACTO (258)
BOOLEANO (259)
BUCLE (260)
CARACTER (261)
CASOS (262)
CLASE (263)
COMO (264)
CONSTANTE (265)
CONSTRUCTOR (266)
CORTO (267)
CUANDO (268)
DE (269)
DESCENDENTE (270)
DESTRUCTOR (271)
DEVOLVER (272)
DICCIONARIO (273)
EN (274)
ENTERO (275)
ENTONCES (276) 30 31
ENUMERACION (277)
ES (278)
ESPECIFICO (279)
EXCEPCION (280)
EXPORTAR (281)
FALSO (282) 18
FIN (283)
FINAL (284)
FINALMENTE (285)
GENERICO (286)
IMPORTAR (287)
LARGO (288)
LANZA (289)
LIBRERIA (290)
LISTA (291)
MIENTRAS (292)
OBJETO (293)
OTRO (294)
PARA (295)
PRINCIPIO (296)
PRIVADO (297)
PROGRAMA (298)
PROTEGIDO (299)
PRUEBA (300)
PUBLICO (301)
RANGO (302)
REAL (303)
REFERENCIA (304)
REGISTRO (305)
REPETIR (306)
SALIR (307)
SI (308) 30 31
SIGNO (309)
SIGUIENTE (310)
SINO (311) 31
SUBPROGRAMA (312)
TABLA (313)
TIPO (314)
ULTIMA (315)
VALOR (316)
VERDADERO (317) 17
CTC_CARACTER (318) 21
CTC_CADENA (319) 5 6 22 27
ID (320)
CTC_ENTERA (321) 19
CTC_REAL (322) 20
DOS_PUNTOS (323)
CUATRO_PUNTOS (324) 9
ASIGNACION (325)
FLECHA (326)
INC (327)
DEC (328)
DESPI (329)
DESPD (330)
LEQ (331)
GEQ (332)
NEQ (333)
AND (334)
OR (335)
ASIG_SUMA (336)
ASIG_RESTA (337)
ASIG_MULT (338)
ASIG_DIV (339)
ASIG_RESTO (340)
ASIG_POT (341)
ASIG_DESPI (342)
ASIG_DESPD (343)
IDENTIFICADOR (344) 8 9


No terminales con las reglas donde aparecen

$accept (99)
    en la izquierda: 0
fin (100)
    en la izquierda: 1 2 3 4, en la derecha: 0 2 3 4
cadenaMult (101)
    en la izquierda: 5 6 7, en la derecha: 3 6 7 28
nombre (102)
    en la izquierda: 8 9, en la derecha: 9 23 24
expresionMult (103)
    en la izquierda: 10 11 12, en la derecha: 10 26
expresion (104)
    en la izquierda: 13, en la derecha: 10 11 12 16 25 29 30 31
primario (105)
    en la izquierda: 14 15 16, en la derecha: 1 2 13
literal (106)
    en la izquierda: 17 18 19 20 21 22, en la derecha: 14
objeto (107)
    en la izquierda: 23 24 25 26 27 28, en la derecha: 15 24 25 26
    27 28
expresionCondicional (108)
    en la izquierda: 29 30 31, en la derecha: 4


Estado 0

    0 $accept: . fin $end

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    fin       ir al estado 9
    nombre    ir al estado 10
    primario  ir al estado 11
    literal   ir al estado 12
    objeto    ir al estado 13


Estado 1

   18 literal: FALSO .

    $default  reduce usando la regla 18 (literal)


Estado 2

   17 literal: VERDADERO .

    $default  reduce usando la regla 17 (literal)


Estado 3

   21 literal: CTC_CARACTER .

    $default  reduce usando la regla 21 (literal)


Estado 4

   22 literal: CTC_CADENA .

    $default  reduce usando la regla 22 (literal)


Estado 5

   19 literal: CTC_ENTERA .

    $default  reduce usando la regla 19 (literal)


Estado 6

   20 literal: CTC_REAL .

    $default  reduce usando la regla 20 (literal)


Estado 7

    8 nombre: IDENTIFICADOR .

    $default  reduce usando la regla 8 (nombre)


Estado 8

   16 primario: '(' . expresion ')'

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 14
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 9

    0 $accept: fin . $end
    2 fin: fin . primario
    3    | fin . cadenaMult
    4    | fin . expresionCondicional

    $end           desplazar e ir al estado 16
    FALSO          desplazar e ir al estado 1
    SI             desplazar e ir al estado 17
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 18
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    cadenaMult            ir al estado 19
    nombre                ir al estado 10
    expresion             ir al estado 20
    primario              ir al estado 21
    literal               ir al estado 12
    objeto                ir al estado 13
    expresionCondicional  ir al estado 22


Estado 10

    9 nombre: nombre . CUATRO_PUNTOS IDENTIFICADOR
   23 objeto: nombre .

    CUATRO_PUNTOS  desplazar e ir al estado 23

    $default  reduce usando la regla 23 (objeto)


Estado 11

    1 fin: primario .

    $default  reduce usando la regla 1 (fin)


Estado 12

   14 primario: literal .

    $default  reduce usando la regla 14 (primario)


Estado 13

   15 primario: objeto .
   24 objeto: objeto . '.' nombre
   25       | objeto . '[' expresion ']'
   26       | objeto . '[' expresionMult ']'
   27       | objeto . '{' CTC_CADENA '}'
   28       | objeto . '{' cadenaMult '}'

    '.'  desplazar e ir al estado 24
    '['  desplazar e ir al estado 25
    '{'  desplazar e ir al estado 26

    $default  reduce usando la regla 15 (primario)


Estado 14

   16 primario: '(' expresion . ')'

    ')'  desplazar e ir al estado 27


Estado 15

   13 expresion: primario .

    $default  reduce usando la regla 13 (expresion)


Estado 16

    0 $accept: fin $end .

    $default  aceptar


Estado 17

   30 expresionCondicional: SI . expresion ENTONCES expresion
   31                     | SI . expresion ENTONCES expresion SINO expresion

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 28
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 18

    5 cadenaMult: CTC_CADENA . ',' CTC_CADENA
   22 literal: CTC_CADENA .

    ','  desplazar e ir al estado 29

    $default  reduce usando la regla 22 (literal)


Estado 19

    3 fin: fin cadenaMult .
    6 cadenaMult: cadenaMult . ',' CTC_CADENA
    7           | cadenaMult . ',' error

    ','  desplazar e ir al estado 30

    $default  reduce usando la regla 3 (fin)


Estado 20

   29 expresionCondicional: expresion .

    $default  reduce usando la regla 29 (expresionCondicional)


Estado 21

    2 fin: fin primario .
   13 expresion: primario .

    $end           reduce usando la regla 2 (fin)
    $end           [reduce usando la regla 13 (expresion)]
    FALSO          reduce usando la regla 2 (fin)
    FALSO          [reduce usando la regla 13 (expresion)]
    SI             reduce usando la regla 2 (fin)
    SI             [reduce usando la regla 13 (expresion)]
    VERDADERO      reduce usando la regla 2 (fin)
    VERDADERO      [reduce usando la regla 13 (expresion)]
    CTC_CARACTER   reduce usando la regla 2 (fin)
    CTC_CARACTER   [reduce usando la regla 13 (expresion)]
    CTC_CADENA     reduce usando la regla 2 (fin)
    CTC_CADENA     [reduce usando la regla 13 (expresion)]
    CTC_ENTERA     reduce usando la regla 2 (fin)
    CTC_ENTERA     [reduce usando la regla 13 (expresion)]
    CTC_REAL       reduce usando la regla 2 (fin)
    CTC_REAL       [reduce usando la regla 13 (expresion)]
    IDENTIFICADOR  reduce usando la regla 2 (fin)
    IDENTIFICADOR  [reduce usando la regla 13 (expresion)]
    '('            reduce usando la regla 2 (fin)
    '('            [reduce usando la regla 13 (expresion)]
    $default       reduce usando la regla 2 (fin)


Estado 22

    4 fin: fin expresionCondicional .

    $default  reduce usando la regla 4 (fin)


Estado 23

    9 nombre: nombre CUATRO_PUNTOS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 31


Estado 24

   24 objeto: objeto '.' . nombre

    IDENTIFICADOR  desplazar e ir al estado 7

    nombre  ir al estado 32


Estado 25

   25 objeto: objeto '[' . expresion ']'
   26       | objeto '[' . expresionMult ']'

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre         ir al estado 10
    expresionMult  ir al estado 33
    expresion      ir al estado 34
    primario       ir al estado 15
    literal        ir al estado 12
    objeto         ir al estado 13


Estado 26

   27 objeto: objeto '{' . CTC_CADENA '}'
   28       | objeto '{' . cadenaMult '}'

    CTC_CADENA  desplazar e ir al estado 35

    cadenaMult  ir al estado 36


Estado 27

   16 primario: '(' expresion ')' .

    $default  reduce usando la regla 16 (primario)


Estado 28

   30 expresionCondicional: SI expresion . ENTONCES expresion
   31                     | SI expresion . ENTONCES expresion SINO expresion

    ENTONCES  desplazar e ir al estado 37


Estado 29

    5 cadenaMult: CTC_CADENA ',' . CTC_CADENA

    CTC_CADENA  desplazar e ir al estado 38


Estado 30

    6 cadenaMult: cadenaMult ',' . CTC_CADENA
    7           | cadenaMult ',' . error

    error       desplazar e ir al estado 39
    CTC_CADENA  desplazar e ir al estado 40


Estado 31

    9 nombre: nombre CUATRO_PUNTOS IDENTIFICADOR .

    $default  reduce usando la regla 9 (nombre)


Estado 32

    9 nombre: nombre . CUATRO_PUNTOS IDENTIFICADOR
   24 objeto: objeto '.' nombre .

    CUATRO_PUNTOS  desplazar e ir al estado 23

    $default  reduce usando la regla 24 (objeto)


Estado 33

   10 expresionMult: expresionMult . ',' expresion
   26 objeto: objeto '[' expresionMult . ']'

    ','  desplazar e ir al estado 41
    ']'  desplazar e ir al estado 42


Estado 34

   11 expresionMult: expresion . ',' expresion
   12              | expresion . ',' error
   25 objeto: objeto '[' expresion . ']'

    ','  desplazar e ir al estado 43
    ']'  desplazar e ir al estado 44


Estado 35

    5 cadenaMult: CTC_CADENA . ',' CTC_CADENA
   27 objeto: objeto '{' CTC_CADENA . '}'

    ','  desplazar e ir al estado 29
    '}'  desplazar e ir al estado 45


Estado 36

    6 cadenaMult: cadenaMult . ',' CTC_CADENA
    7           | cadenaMult . ',' error
   28 objeto: objeto '{' cadenaMult . '}'

    ','  desplazar e ir al estado 30
    '}'  desplazar e ir al estado 46


Estado 37

   30 expresionCondicional: SI expresion ENTONCES . expresion
   31                     | SI expresion ENTONCES . expresion SINO expresion

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 47
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 38

    5 cadenaMult: CTC_CADENA ',' CTC_CADENA .

    $default  reduce usando la regla 5 (cadenaMult)


Estado 39

    7 cadenaMult: cadenaMult ',' error .

    $default  reduce usando la regla 7 (cadenaMult)


Estado 40

    6 cadenaMult: cadenaMult ',' CTC_CADENA .

    $default  reduce usando la regla 6 (cadenaMult)


Estado 41

   10 expresionMult: expresionMult ',' . expresion

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 48
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 42

   26 objeto: objeto '[' expresionMult ']' .

    $default  reduce usando la regla 26 (objeto)


Estado 43

   11 expresionMult: expresion ',' . expresion
   12              | expresion ',' . error

    error          desplazar e ir al estado 49
    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 50
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 44

   25 objeto: objeto '[' expresion ']' .

    $default  reduce usando la regla 25 (objeto)


Estado 45

   27 objeto: objeto '{' CTC_CADENA '}' .

    $default  reduce usando la regla 27 (objeto)


Estado 46

   28 objeto: objeto '{' cadenaMult '}' .

    $default  reduce usando la regla 28 (objeto)


Estado 47

   30 expresionCondicional: SI expresion ENTONCES expresion .
   31                     | SI expresion ENTONCES expresion . SINO expresion

    SINO  desplazar e ir al estado 51

    $default  reduce usando la regla 30 (expresionCondicional)


Estado 48

   10 expresionMult: expresionMult ',' expresion .

    $default  reduce usando la regla 10 (expresionMult)


Estado 49

   12 expresionMult: expresion ',' error .

    $default  reduce usando la regla 12 (expresionMult)


Estado 50

   11 expresionMult: expresion ',' expresion .

    $default  reduce usando la regla 11 (expresionMult)


Estado 51

   31 expresionCondicional: SI expresion ENTONCES expresion SINO . expresion

    FALSO          desplazar e ir al estado 1
    VERDADERO      desplazar e ir al estado 2
    CTC_CARACTER   desplazar e ir al estado 3
    CTC_CADENA     desplazar e ir al estado 4
    CTC_ENTERA     desplazar e ir al estado 5
    CTC_REAL       desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    '('            desplazar e ir al estado 8

    nombre     ir al estado 10
    expresion  ir al estado 52
    primario   ir al estado 15
    literal    ir al estado 12
    objeto     ir al estado 13


Estado 52

   31 expresionCondicional: SI expresion ENTONCES expresion SINO expresion .

    $default  reduce usando la regla 31 (expresionCondicional)
